- fixed tests